Try to fix table font size on mobile

--- a/main.css
+++ b/main.css
@@ -182,7 +182,6 @@ div#main-content {
 
 /* Curriculum Vitae table */
 div#main-content td, div#main-content th {
-  font-size: 2.5em;
   vertical-align: top;
 }
 
